@@ -493,7 +493,8 @@ If so the &ldquo;Can the user query a <em>entire</em> REDCap project using RCurl
 <h2>Other good resources</h2>
 
 <ul>
-<li>The basic API documentation is available on your REDCap server, typically at http://&lt;<em>your server name</em>&gt;/redcap/api/help</li>
+<li>The basic API documentation is available on your REDCap server, typically at http://&lt;<em>your server name</em>&gt;/redcap/api/help.</li>
+<li>If you have access to the REDCap wiki, some newer examples might exist at <a href="https://iwg.devguard.com/trac/redcap/wiki/ApiExamples">https://iwg.devguard.com/trac/redcap/wiki/ApiExamples</a>.</li>
 <li>Scott Burns, the developer of <a href="http://sburns.org/PyCap/">PyCap</a> has a good intro at <a href="http://sburns.org/2013/07/22/intro-to-redcap-api.html">http://sburns.org/2013/07/22/intro-to-redcap-api.html</a></li>
 <li>Bejamin Nutter, the developer of <a href="https://github.com/nutterb/redcapAPI/wiki">redcapAPI</a> has a good wiki at <a href="https://github.com/nutterb/redcapAPI/wiki">https://github.com/nutterb/redcapAPI/wiki</a></li>
 <li>In addition to this troubleshooting document, REDCapR has a <a href="http://htmlpreview.github.io/?https://github.com/OuhscBbmc/REDCapR/blob/master/inst/doc/BasicREDCapROperations.html">vignette</a> that covers its basic operations.</li>
